# QazSign-2026

./: qazsignv2.1_tcn.ipynb
.ipynb_checkpoints/: qazsignv2.1_tcn-checkpoint.ipynb
Logs1/train/: events.out.tfevents.1771176204.LOXINROG.3388.2.v2
Logs1/validation/: events.out.tfevents.1771176214.LOXINROG.3388.3.v2
QazSign-Mobile/: .replit  app.json  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md
QazSign-Mobile/attached_assets/: Pasted-QazSign-Mobile-Application-Functional-Description-Appli_1769539972550.txt
QazSign-Mobile/client/components/: CategoryPill.tsx  EmptyState.tsx  FloatingActionButton.tsx  GestureCard.tsx  SearchBar.tsx  SettingsRow.tsx  UserProfileCard.tsx
QazSign-Mobile/client/constants/: theme.ts
QazSign-Mobile/client/lib/: storage.ts
QazSign-Mobile/client/navigation/: DictionaryStackNavigator.tsx  LearnStackNavigator.tsx  MainTabNavigator.tsx  RootStackNavigator.tsx  TranslateStackNavigator.tsx
QazSign-Mobile/client/screens/: DictionaryScreen.tsx  GestureDetailScreen.tsx  HistoryScreen.tsx  LearnScreen.tsx  QuizScreen.tsx  SettingsScreen.tsx  TranslateScreen.tsx
QazSign-Mobile/python_server/: app.py  predict.py
QazSign-Mobile/python_server/frames/: session_1769543822925_frame.txt
QazSign-Mobile/python_server/sequences/: session_1769542852936.npy  session_1769542880779.npy  session_1769543822925.npy
QazSign-Mobile/server/: index.ts  routes.ts
QazSign-Mobile/shared/: schema.ts
